# pixie-firmware

./: .gitmodules  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  config.h  device-info.c  device-info.h  events-private.h  events.c  events.h  main.c  panel-attest.c  panel-attest.h  panel-connect.c  panel-connect.h  panel-gifs.c  panel-gifs.h  panel-info.c  panel-info.h  panel-keyboard.c  panel-menu.c  panel-menu.h  panel-null.c  panel-null.h  panel-space.c  panel-space.h  panel-test.c  panel-test.h  panel-tx.c  panel-tx.h  panel.c  panel.h  task-ble.c  task-ble.h  task-io.c  utils.c  utils.h
